--- a/records/test/index.html
+++ b/records/test/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <button class="btn"><i class="fa fa-home"></i></button>
     <div id="search-container">
         <form id="search-form">
             <input type="text" id="search-input" placeholder="Search...">
