Paging for records

--- a/records/index.html
+++ b/records/index.html
@@ -19,6 +19,10 @@
             <input type="text" id="search-input" placeholder="Search records..." autocomplete="off">
         </form>
         <div id="results"></div>
+        <div id="pagination">
+            <button id="prev-page">Previous</button>
+            <button id="next-page">Next</button>
+        </div>
         <script src="search.js"></script>
     </div>
 </body>
