--- a/records/index.html
+++ b/records/index.html
@@ -18,6 +18,10 @@
         <form id="search-form">
             <input type="text" id="search-input" placeholder="Search records..." autocomplete="off">
         </form>
+        <div id="pagination">
+            <button id="prev-page">Previous</button>
+            <button id="next-page">Next</button>
+        </div>
         <div id="results"></div>
         <div id="pagination">
             <button id="prev-page">Previous</button>
