--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                         <div class="fix-7-12 margin-top-2">
                             <h1 class="ae-5 fronLeft">R3ne</h1>
                             <div class="light ae-6 fromrRight">
-                                <p class="opacity-8">I am a technology enthusiast who enjoys creating games, software, and other
+                                <p class="opacity-8">I am a technology enthusiast who enjoys creating games, software,
+                                    and other
                                     cool projects.</p>
                             </div>
                         </div>
@@ -349,9 +350,68 @@
         <div class="content">
             <div class="container">
                 <div class="wrap">
-
                     <div class="fix-9-12">
-                        <!--<p class="hero ae-2 margin-bottom-3"><span class="opacity-8"><a href="mailto:mail@r3ne.net">mail@r3ne.net</a></span></p>-->
+                        <p class="hero ae-2 margin-bottom-3"><span><a
+                                    href="mailto:mail@r3ne.net">mail@r3ne.net</a></span></p>
+                        <textarea readonly style="width: 70%; height: 200px; text-align: center;">
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+
+xsFNBGQaAk0BEAC0gBTMszMVGX0wbGvcp3fgjTeUS4+ztsvvXljL/ZerSK0a
+SpcXjOSYzvXFCdpDvjeMqKZXVPw0sqMJyfY4BzglJR3cXvbXJwjA8Ktx/Hm3
+Pt5ymt/QC9kNbX2UxqoO2ZADkRDzvVxnY6yow59T5FtqGQKkjiPnOFoSBQp/
+t25ZabrOFvA7A6YOd6dYtWR6pSSIm0lFpx03YM7o0IzZjcGmdtkCZcqGBDCV
+li7mZ+KpL6Xi36FnD45bE6kWCabo+lUYHE9rW+sWz0NGzOKlio994K5k5KTk
+IakV+bt7rjmcnWVQnhe4JNB/7BtH2jPvIgy8TLkpIRXMhfVl30GMfHz71+Um
+A40Y1az4HDEzN2evEuPiitwzwcPfIR2CaFwgvyq2n3QhTXA33Vyo0oo5hoog
+Zu2XNllH/faSDTzUQEw5S1PkTWAPENcYxzLHr/4jGUZkmuOW5KclvastPwvM
+nRYKvREht2Wd6jMFEPEdky/pStOsTfr/U9c5ypLW8MoF+pEv+uTpgfYhoJUp
+5gCqdYvPjNunT7WOF0Xl0P0mPx4h+/iygS8whQ1Ly/PBVBKPaLPk4ejXWzAg
+X9WY3B+jciz9cJ7gdvhmrGBKPrX79lFn2ksISrfvCa+N9nQK2b5pdHoPY8ck
+eXExxH74f2rEPI6h6p/TMc61Iblfn3pjKLkOaQARAQABzR1tYWlsQHIzbmUu
+bmV0IDxtYWlsQHIzbmUubmV0PsLBigQQAQgAPgUCZBoCTQQLCQcICRCUhClY
+oJFTgQMVCAoEFgACAQIZAQIbAwIeARYhBDmby0Istl//3zTsQ5SEKVigkVOB
+AAAJvg/+L5JxbS9wv23ji5dyFilcd1oYABBsblls4E73XX4cNYqRNhs3KnO9
+KU5QGMAj5U5j+VkoBH48wncHSJQd7BGb+PLrtXWckMWUhzU+lRMS5KvvB+PN
+yzDf2Jovi78eO9Rsme/O12NJ2gvZMobwFbOPyScMCshV8iXxSRuYbvkGvimV
+wmXzha75jlHA7EMPha48cSrsY/swS4V2G3ALlxu5+dEPIz08yVu12nZofe0H
+V7osMjGLEJ3Q1pipoF9a7AK/IHLS6v6K3vJnEQUQexG2CGCNrTIpvm/ZMMhb
+8FjTli+LAntoReWs81MjYf6WRai3bPYFV+c3J3j3f/X0QgYoBQcfYKoEbBb/
+fnV0LGlCPVNtCG/gswcThcwEBpjDXPEnyyCOq2DQBj8+mjKs9JziChaPtXKf
+6FDvAlPWpXiwDKr9iiw+K1fu0XTJG+KwRJdNlLBMHiWDRHA5eCo74YUU9HZJ
+6LzUMJ1ZI6LfM1qGche6ncflUFhyscgOsmQI3Chr4w10hnEJQszKkJTPLR3r
++MaKIPtThAYpSm5NfzG1kF+fN7GEizHozTgyAw1NsNj/tk8F9azGKn+xVt7T
+CEdzZTOeRFSvxxyBx/IRk3YfGGQJm1BSiYbvZjqJjuyODtw7WlVhBszbKVLV
+9sis/7fOnZVHvSXRlOxUzTHSp7R4yL7OwU0EZBoCTQEQAOMDTIol8KprA+sR
+bicfk/2JiHfH/uz7XfMHrnMgkppGPcZx/0hab6poTAP25EoQxJHt8s/wuO5U
+bv5y2tVqj2DY061DPbBk0zVRtz2A86k7mfk6L9GBGjhHLkozqxRp6A6y9C3+
+li+ym9RHo8aZPm4rE2vLLkXR60kiGPIzlj+E8wA1YOAqSPBbDJSfGnET6nsm
+BtbDz4BBJFwjDY7qGGT6F+qL8P9vU6VOMW4DQMmMiuE5YgzktQGdHNNEAl6i
+f8rbjUQVn+r2CttLQEY7tBVQhzm0EieI195HRXfi9hz7gIftrvAgwcYfYtLJ
+3OA4peUgbRgskrVjJrBSMNRqPwJnnSKj9TdR9bh3l3+dQEfHfrZs7GSy2Z2c
+o12GawAKImAEg2GCs+5MR3VzULGY6VQABN0GdQ/j4dijFHSwkt6fcq2JPtMN
+FkIWFlkSf5hLJo0jkoXDvZoBZvRIa2+I13MpmF3F9MiCUsFo0YK78gmB6Nr6
+AtqM4mN1KuMUP+Tpk2okZuh1JZNMIeVhZhhnKejPFyMk2ic+xlxm3IFFGwwp
+m+uhGqfCGP4XQUlJLrBU6/VZ8q+Mvax7iCOPSE8nT5arJaM8z63QUU14Y1uD
+RQ2T7319SG3QrWelTvm7usWjcNj/debAR+HHpJAnDSIHzms1pcJnLCw3nhE5
+y05C9383ABEBAAHCwXYEGAEIACoFAmQaAk0JEJSEKVigkVOBAhsMFiEEOZvL
+Qiy2X//fNOxDlIQpWKCRU4EAAEPID/9gj8np+6cUsWBU8rId3Dj1JyTzwiS/
+t3Io6aRKNW6Y0D7EVYk2KGfJ6ulQpRBw2WXqhmFwAsxYxlvdd6HvijgrOUOI
+zz2oawHKCekptCc4r2nx3X5Zw9Y6fJb9zRCV0SREojprHLy8ZuYrYMWZfZq6
+/5r1mWM6WluK63la9dZpYuzWaS0KVC/OQHSzUZTP1duMz5Yeg2+0fZn18bRr
+OrmMRD+C4bY6eqezwJyFVPMqciI9p4tPHMyBE78lLxK+bVUp1qZe7XWUqGMU
+JBJED+Xovh0yQgQMy+tJvuqf5diCV5tFmx9n5I3QGYAAQ7HoOaQ+WuN5LwEM
+z4cNt4P6UqYDfnDukFctgM400tBrAvMqZi9LgOVfPzAESIfK2jfvQx0hxnKe
+i81nSyf5shuHD4C6EpOpPVUagJ39UOuB3bLUchic4h/wCMWnoABECXZ2/pAq
+rBc/4CZkg1XCpjvzMdf9FmZpzW0grASBDmSwWp3Mw4KB6fJS2WwoPg7uh/nb
+QwjGQu4ZBqu6rsAcNPURF5aiZ+haC7zYAdVjP3iUFWbDrvzcepvu9vg/kGrn
+A1SlPn2zAHJrpJlTkWxTk3ATnyih+ZMBtf0IWe2TheucB5FDO+MKywrlM7Ip
+w5gSwSWSm30mwfVtyhe14c5h9fzcMx7YF8RjeMeLJneSPhXV/1iAMA==
+=2z53
+-----END PGP PUBLIC KEY BLOCK-----
+                            
+                        </textarea>
+                    </div>
+                    <div class="fix-9-12">
                         <a href="https://github.com/JAAKKQ" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/GitHub_Logo_White.png" height="63" /></a>
                     </div>
@@ -359,7 +419,7 @@
                 </div>
             </div>
         </div>
-        <div class="background" style="background-image: url(assets/img/background/Page_Background.png)"></div>
+        <div class="background" style="background-image: url(assets/img/background/doge.gif)"></div>
     </section>
     <!-- Loading Progress Bar -->
     <div class="progress-bar darkGreen"></div>
