--- a/index.html
+++ b/index.html
@@ -353,7 +353,8 @@
                     <div class="fix-9-12">
                         <p class="hero ae-2 margin-bottom-3"><span><a
                                     href="mailto:mail@r3ne.net">mail@r3ne.net</a></span></p>
-                        <textarea readonly style="width: 70%; height: 200px; text-align: center;">
+                        <p class="hero ae-2 margin-bottom-3">
+                            <textarea readonly style="width: 70%; height: 200px; text-align: center;">
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 
 xsFNBGQaAk0BEAC0gBTMszMVGX0wbGvcp3fgjTeUS4+ztsvvXljL/ZerSK0a
@@ -410,6 +411,7 @@ w5gSwSWSm30mwfVtyhe14c5h9fzcMx7YF8RjeMeLJneSPhXV/1iAMA==
 -----END PGP PUBLIC KEY BLOCK-----
                             
                         </textarea>
+                        </p>
                     </div>
                     <div class="fix-9-12">
                         <a href="https://github.com/JAAKKQ" target="_blank" class="button hollow ae-5"><img
