--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="icon" href="assets/icon/favicon.ico" type="image/gif" sizes="16x16">
-    <meta name="Description" CONTENT="I make games, software and other cool stuff.">
+    <meta name="title" content="R3ne.net"><meta name="description" content="I am a technology enthusiast who enjoys creating games, software, and other cool projects.">
+    <meta name="robots" content="index, follow">
     <meta name="keywords" content="rene, r3ne" />
 
     <!-- Page Title -->
@@ -417,7 +418,6 @@ w5gSwSWSm30mwfVtyhe14c5h9fzcMx7YF8RjeMeLJneSPhXV/1iAMA==
                         <a href="https://github.com/JAAKKQ" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/GitHub_Logo_White.png" height="63" /></a>
                     </div>
-
                 </div>
             </div>
         </div>
