--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, viewport-fit=cover">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="icon" href="assets/icon/favicon.ico" type="image/gif" sizes="16x16">
-    <meta name="title" content="R3ne.net"><meta name="description" content="I am a technology enthusiast who enjoys creating games, software, and other cool projects.">
+    <meta name="title" content="R3ne.net">
+    <meta name="description"
+        content="I am a technology enthusiast who enjoys creating games, software, and other cool projects.">
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="rene, r3ne" />
 
@@ -154,12 +156,12 @@
                             <li class="col-6-12 fromBottomLeft">
                                 <h1 class="ae-2">Beryllium</h1>
                                 <div class="ae-3">
-                                    <p class="opacity-8">Beryllium was a first-person shooter multiplayer game pitting
-                                        terrorists and counter-terrorists against each other. The terrorists' goal was
-                                        to plant a bomb and the counter-terrorists' goal was to defuse it. Players could
-                                        also win by eliminating all members of the opposing team. However, the
-                                        development of
-                                        Beryllium has been halted.</p>
+                                    <p class="opacity-8">Beryllium is a first-person shooter multiplayer game that pits
+                                        terrorists and counter-terrorists against each other. The terrorists' goal is to
+                                        plant a bomb while the counter-terrorists' goal is to defuse it. Players can
+                                        also win by eliminating all members of the opposing team. Although the
+                                        development of Beryllium has been halted, the game still exists and can be
+                                        played offline.</p>
                                     <p class="opacity-8">If you would like to try it, send me a email so I can give you
                                         a key!</p>
                                 </div>
