--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                         <p class="hero ae-2 margin-bottom-3"><span><a
                                     href="mailto:mail@r3ne.net">mail@r3ne.net</a></span></p>
                         <p class="hero ae-2 margin-bottom-3">
-                            <textarea readonly style="width: 70%; height: 200px; text-align: center;">
+                            <textarea readonly style="width: 70%; height: 200px; text-align: center; max-width: 100%;">
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 
 xsFNBGQaAk0BEAC0gBTMszMVGX0wbGvcp3fgjTeUS4+ztsvvXljL/ZerSK0a
@@ -415,6 +415,10 @@ w5gSwSWSm30mwfVtyhe14c5h9fzcMx7YF8RjeMeLJneSPhXV/1iAMA==
                             
                         </textarea>
                         </p>
+                    </div>
+                    <div class="fix-9-12">
+                        <a href="https://www.linkedin.com/in/r3ne/" target="_blank" class="button hollow ae-5"><img
+                                src="assets/img/LI-Logo.png" height="50" /></a>
                     </div>
                     <div class="fix-9-12">
                         <a href="https://github.com/JAAKKQ" target="_blank" class="button hollow ae-5"><img
