--- a/index.html
+++ b/index.html
@@ -411,9 +411,7 @@ QwjGQu4ZBqu6rsAcNPURF5aiZ+haC7zYAdVjP3iUFWbDrvzcepvu9vg/kGrn
 A1SlPn2zAHJrpJlTkWxTk3ATnyih+ZMBtf0IWe2TheucB5FDO+MKywrlM7Ip
 w5gSwSWSm30mwfVtyhe14c5h9fzcMx7YF8RjeMeLJneSPhXV/1iAMA==
 =2z53
------END PGP PUBLIC KEY BLOCK-----
-                            
-                        </textarea>
+-----END PGP PUBLIC KEY BLOCK-----</textarea>
                         </p>
                     </div>
                     <div class="fix-9-12">
