--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="icon" href="assets/icon/favicon.ico" type="image/gif" sizes="16x16">
     <meta name="title" content="R3ne.net">
-    <meta name="description"
-        content="I am a technology enthusiast who enjoys creating games, software, and other cool projects.">
+    <meta name="description" content="I am a technology enthusiast who enjoys creating games, software, and other cool projects.">
     <meta name="robots" content="index, follow">
-    <meta name="keywords" content="rene, r3ne" />
+    <meta name="keywords" content="rene, r3ne, karkkainen" />
 
     <!-- Page Title -->
     <title>R3ne</title>
@@ -59,7 +58,7 @@
                 <div class="wrap">
                     <div class="fix-6-12 noSelect">
                         <div class="fix-7-12 margin-top-2">
-                            <h1 class="ae-5 fronLeft">R3ne</h1>
+                            <h1 class="ae-5 fronLeft">R3ne Kärkkäinen</h1>
                             <div class="light ae-6 fromrRight">
                                 <p class="opacity-8">I am a technology enthusiast who enjoys creating games, software,
                                     and other
