--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="keywords" content="rene, r3ne, karkkainen" />
 
     <!-- Page Title -->
-    <title>R3ne</title>
+    <title>R3ne Kärkkäinen</title>
 
     <!-- Compressed Styles -->
     <link href="css/slides.min.css" rel="stylesheet" type="text/css">
