--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                 </div>
             </div>
         </div>
-        <div class="background" style="background-image: url(assets/img/background/myGuy.jpeg) "></div>
+        <div class="background" style="background-image: url(assets/img/background/dog-dj.gif) "></div>
     </section>
     <!-- Popup Video -->
     <div class="popup autoplay" data-popup-id="89-4">
