--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
             <div class="container">
                 <div class="wrap">
                     <div class="fix-9-12">
+                        <h1 class="ae-2">Contact</h1>
                         <p class="hero ae-2 margin-bottom-3"><span><a
                                     href="mailto:mail@r3ne.net">mail@r3ne.net</a></span></p>
                         <p class="hero ae-2 margin-bottom-3">
