--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <div class="fix-7-12 margin-top-2">
                             <h1 class="ae-5 fronLeft">R3ne Kärkkäinen</h1>
                             <div class="light ae-6 fromrRight">
-                                <p class="opacity-8">I am a technology enthusiast who enjoys creating games, software,
+                                <p class="opacity-8">I am a finnish technology enthusiast who enjoys creating games, software,
                                     and other
                                     cool projects.</p>
                             </div>
