--- a/cv/index.html
+++ b/cv/index.html
@@ -4,6 +4,7 @@
   <title>Terminal CV | R3ne Kärkkäinen</title>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="assets/css/index.css">
+  <link rel="stylesheet" as="font"href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,600,700|Material+Icons" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
