--- a/cv/rimijoker.html
+++ b/cv/rimijoker.html
@@ -7,10 +7,11 @@
   <a href="#Link"> Resume</a>
 </p>
 <p>
-  I am very laid back and trying to approach situations with positivity and humor. <br /><br /><br />Besides IT I also
-  like music and woodworking. <br /><br /><br />I am currently studying Information and Communications Technology as a
-  dual qualification program at Helsinki Business College.<br /><br /><br />You can checkout my projects on my resume,
-  but if you are more tech savy, here is my
+  I am very laid back and trying to approach situations with positivity and humor. 
+  <br /><br /><br />Besides IT I also like music and woodworking. 
+  <br /><br /><br />I am currently studying Information and Communications Technology as a
+  dual qualification program at Helsinki Business College.
+  <br /><br /><br />You can checkout my projects on my resume, but if you are more tech savy, here is my
   <a href="https://github.com/JAAKKQ"> GitHub</a> link.
 </p>
 <p>You can visit my LinkedIn, here: <a href="https://www.linkedin.com/in/r3ne/">LinkedIn</a> <br /></p>
