--- a/cv/index.html
+++ b/cv/index.html
@@ -1,11 +1,13 @@
 <html>
 
 <head>
-  <title>Terminal CV | R3ne Kärkkäinen</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, viewport-fit=cover">
+  <meta name="apple-mobile-web-app-capable" content="yes" />
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="assets/css/index.css">
   <link rel="stylesheet" as="font"href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,600,700|Material+Icons" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Terminal CV | R3ne Kärkkäinen</title>
 </head>
 
 <body>
