--- a/cv/rimijoker.html
+++ b/cv/rimijoker.html
@@ -1,7 +1,7 @@
 <span id="a">karkkainen@r3ne.net</span>:<span id="b">~</span><span id="c">$</span> cd karkkainen/About_Me
 <span id="a">karkkainen@r3ne.net</span>:<span id="b">~</span><span id="c">$</span> cat rene.txt<br /><br />
 "<span id="k">Hey there, nice to see you here.</span>" My name is Rene Kärkkäinen.
-<p>Welcome</p>
+<p>Welcome,</p>
 <p>
   I am a 17-year-old technology enthusiast from Finland.
   <a href="#Link"> Resume</a>
