--- a/index.html
+++ b/index.html
@@ -422,6 +422,9 @@ w5gSwSWSm30mwfVtyhe14c5h9fzcMx7YF8RjeMeLJneSPhXV/1iAMA==
                         <a href="https://github.com/JAAKKQ" target="_blank" class="button hollow ae-5"><img
                                 src="assets/img/GitHub_Logo_White.png" height="63" /></a>
                     </div>
+                    <div class="fix-9-12">
+                        <a href="https://r3ne.net/cv" target="_blank" class="button hollow ae-5"><p>More</p></a>
+                    </div>
                 </div>
             </div>
         </div>
