PGP fingerprint added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="icon" href="assets/icon/favicon.ico" type="image/gif" sizes="16x16">
     <meta name="title" content="R3ne.net">
-    <meta name="description" content="I am a technology enthusiast who enjoys creating games, software, and other cool projects.">
+    <meta name="description"
+        content="I am a technology enthusiast who enjoys creating games, software, and other cool projects.">
     <meta name="robots" content="index, follow">
     <meta name="keywords" content="rene, r3ne, karkkainen" />
 
@@ -60,7 +61,8 @@
                         <div class="fix-7-12 margin-top-2">
                             <h1 class="ae-5 fronLeft">R3ne Kärkkäinen</h1>
                             <div class="light ae-6 fromrRight">
-                                <p class="opacity-8">I am a finnish technology enthusiast who enjoys creating games, software,
+                                <p class="opacity-8">I am a finnish technology enthusiast who enjoys creating games,
+                                    software,
                                     and other
                                     cool projects.</p>
                             </div>
@@ -353,11 +355,11 @@
             <div class="container">
                 <div class="wrap">
                     <div class="fix-9-12">
-                        <h1 class="ae-2">Contact</h1>
-                        <p class="hero ae-2 margin-bottom-3"><span><a
+                        <p class="hero ae-2"><span><a
                                     href="mailto:mail@r3ne.net">mail@r3ne.net</a></span></p>
-                        <p class="hero ae-2 margin-bottom-3">
-                            <textarea readonly style="width: 70%; height: 200px; text-align: center; max-width: 100%;">
+                        <p class="hero ae-2" style="font-size: 12px;">PGP Key Fingerprint: 399b cb42 2cb6 5fff df34 ec43 9484 2958 a091 5381</p>
+                        <p class="hero ae-2">
+                            <textarea readonly style="width: 70%; height: 150px; text-align: center; max-width: 100%;">
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 
 xsFNBGQaAk0BEAC0gBTMszMVGX0wbGvcp3fgjTeUS4+ztsvvXljL/ZerSK0a
@@ -423,7 +425,9 @@ w5gSwSWSm30mwfVtyhe14c5h9fzcMx7YF8RjeMeLJneSPhXV/1iAMA==
                                 src="assets/img/GitHub_Logo_White.png" height="63" /></a>
                     </div>
                     <div class="fix-9-12">
-                        <a href="https://r3ne.net/cv" target="_blank" class="button hollow ae-5"><p>More</p></a>
+                        <a href="https://r3ne.net/cv" target="_blank" class="button hollow ae-5">
+                            <p>More</p>
+                        </a>
                     </div>
                 </div>
             </div>
