--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ WDUC+QStJg==
                     </div>
                     <div class="fix-9-12">
                         <a href="https://r3ne.net/cv" target="_blank" class="button hollow ae-5">
-                            <p>More</p>
+                            <p>About Me</p>
                         </a>
                     </div>
                 </div>
