--- a/servers/index.html
+++ b/servers/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" type="text/css">
-    <title>Document</title>
+    <link rel="icon" href="../assets/icon/favicon.ico" type="image/gif" sizes="16x16">
+    <title>Servers</title>
 </head>
     
 <div class="window">
