--- a/servers/index.html
+++ b/servers/index.html
@@ -12,12 +12,12 @@
 <div class="window">
     <div class="header menu-opened">
         <ul class="menu">
-          <li class="menu-item"><a href="192.168.1.1">PfSense</a></li>
-          <li class="menu-item"><a href="192.168.1.5">EXSI</a></li>
-          <li class="menu-item"><a href="192.168.10.6">Locamente</a></li>
-          <li class="menu-item"><a href="192.168.10.7">Mail Server</a></li>
-          <li class="menu-item"><a href="192.168.10.8">Wazuh</a></li>
-          <li class="menu-item"><a href="192.168.10.10">TrueNAS</a></li>
+          <li class="menu-item"><a href="http://192.168.1.1">PfSense</a></li>
+          <li class="menu-item"><a href="http://192.168.1.5">EXSI</a></li>
+          <li class="menu-item"><a href="http://192.168.10.6">Locamente</a></li>
+          <li class="menu-item"><a href="http://192.168.10.7">Mail Server</a></li>
+          <li class="menu-item"><a href="http://192.168.10.8">Wazuh</a></li>
+          <li class="menu-item"><a href="http://192.168.10.10">TrueNAS</a></li>
         </ul>
         <div class="shop icon icon-bag"></div>
       </div>
