--- a/servers/index.html
+++ b/servers/index.html
@@ -30,7 +30,7 @@
 
             }
         }
-        ping("192.168.1.1", console.log(callback))
+        Pinger_ping("192.168.1.1", console.log(callback))
     </script>
 </head>
 
