--- a/servers/index.html
+++ b/servers/index.html
@@ -9,28 +9,53 @@
     <link rel="icon" href="../assets/icon/favicon.ico" type="image/gif" sizes="16x16">
     <title>Servers</title>
     <script>
-        function Pinger_ping(ip, callback) {
+        (function (root, factory) {
+            if (typeof define === 'function' && define.amd) { define([], factory); } else if (typeof module === 'object' && module.exports) { module.exports = factory(); } else { root.ping = factory(); }
+        }(this, function () {
 
-            if (!this.inUse) {
-
-                this.inUse = true;
-                this.callback = callback
-                this.ip = ip;
-
-                var _that = this;
-
-                this.img = new Image();
-
-                this.img.onload = function () { _that.good(); };
-                this.img.onerror = function () { _that.good(); };
-
-                this.start = new Date().getTime();
-                this.img.src = "http://" + ip;
-                this.timer = setTimeout(function () { _that.bad(); }, 1500);
-
+            /**
+             * Creates and loads an image element by url.
+             * @param  {String} url
+             * @return {Promise} promise that resolves to an image element or
+             *                   fails to an Error.
+             */
+            function request_image(url) {
+                return new Promise(function (resolve, reject) {
+                    var img = new Image();
+                    img.onload = function () { resolve(img); };
+                    img.onerror = function () { reject(url); };
+                    img.src = url + '?random-no-cache=' + Math.floor((1 + Math.random()) * 0x10000).toString(16);
+                });
             }
-        }
-        Pinger_ping("192.168.1.1", console.log(callback))
+
+            /**
+             * Pings a url.
+             * @param  {String} url
+             * @param  {Number} multiplier - optional, factor to adjust the ping by.  0.3 works well for HTTP servers.
+             * @return {Promise} promise that resolves to a ping (ms, float).
+             */
+            function ping(url, multiplier) {
+                return new Promise(function (resolve, reject) {
+                    var start = (new Date()).getTime();
+                    var response = function () {
+                        var delta = ((new Date()).getTime() - start);
+                        delta *= (multiplier || 1);
+                        resolve(delta);
+                    };
+                    request_image(url).then(response).catch(response);
+
+                    // Set a timeout for max-pings, 5s.
+                    setTimeout(function () { reject(Error('Timeout')); }, 5000);
+                });
+            }
+
+            return ping;
+        }));
+        ping('https://google.com/').then(function (delta) {
+            console.log('Ping time was ' + String(delta) + ' ms');
+        }).catch(function (err) {
+            console.error('Could not ping remote URL', err);
+        });
     </script>
 </head>
 
