--- a/servers/index.html
+++ b/servers/index.html
@@ -12,13 +12,6 @@
         (function (root, factory) {
             if (typeof define === 'function' && define.amd) { define([], factory); } else if (typeof module === 'object' && module.exports) { module.exports = factory(); } else { root.ping = factory(); }
         }(this, function () {
-
-            /**
-             * Creates and loads an image element by url.
-             * @param  {String} url
-             * @return {Promise} promise that resolves to an image element or
-             *                   fails to an Error.
-             */
             function request_image(url) {
                 return new Promise(function (resolve, reject) {
                     var img = new Image();
@@ -27,13 +20,6 @@
                     img.src = url + '?random-no-cache=' + Math.floor((1 + Math.random()) * 0x10000).toString(16);
                 });
             }
-
-            /**
-             * Pings a url.
-             * @param  {String} url
-             * @param  {Number} multiplier - optional, factor to adjust the ping by.  0.3 works well for HTTP servers.
-             * @return {Promise} promise that resolves to a ping (ms, float).
-             */
             function ping(url, multiplier) {
                 return new Promise(function (resolve, reject) {
                     var start = (new Date()).getTime();
@@ -44,11 +30,9 @@
                     };
                     request_image(url).then(response).catch(response);
 
-                    // Set a timeout for max-pings, 5s.
                     setTimeout(function () { reject(Error('Timeout')); }, 5000);
                 });
             }
-
             return ping;
         }));
 
@@ -56,31 +40,35 @@
             var items = document.getElementsByClassName("menu-item");
             for (var i = 0; i < items.length; i++) {
                 var url = items[i].getElementsByTagName("a")[0].href;
-                ping(url).then(function (delta) {
-                    console.log('Ping time was ' + String(delta) + ' ms');
-                }).catch(function (err) {
+                ping(url).then((function (index) { // Use a closure to capture the value of i
+                    return function (delta) {
+                        console.log('Ping time was ' + String(delta) + ' ms');
+                        items[index].style.display = "contents"; // Use the captured index value
+                    }
+                })(i)).catch(function (err) {
                     console.error('Could not ping remote URL', err);
+                    items[i].style.display = "none";
                 });
             }
         };
+
+
     </script>
 </head>
 
-<div class="window">
-    <div class="header menu-opened">
-        <ul class="menu">
-            <li class="menu-item"><a href="https://192.168.1.1">PfSense</a></li>
-            <li class="menu-item"><a href="https://192.168.1.5">EXSI</a></li>
-            <li class="menu-item"><a href="https://192.168.10.6:9090">Locamente</a></li>
-            <li class="menu-item"><a href="https://192.168.10.7">Mail Server</a></li>
-            <li class="menu-item"><a href="https://192.168.10.8">Wazuh</a></li>
-            <li class="menu-item"><a href="https://192.168.10.10">TrueNAS</a></li>
-        </ul>
-        <div class="shop icon icon-bag"></div>
-    </div>
-
-    <body>
-
-    </body>
+<body>
+    <div class="window">
+        <div class="header menu-opened">
+            <ul class="menu">
+                <li class="menu-item" style="display:none"><a href="https://192.168.1.1">PfSense</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.1.5">EXSI</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090">Locamente</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.7">Mail Server</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.8">Wazuh</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.10">TrueNAS</a></li>
+            </ul>
+            <div class="shop icon icon-bag"></div>
+        </div>
+</body>
 
 </html>
