--- a/servers/index.html
+++ b/servers/index.html
@@ -60,7 +60,7 @@
     <div class="window">
         <div class="header menu-opened">
             <ul class="menu">
-                <li class="menu-item" style="display:none"><a href="https://192.168.1.1:443">PfSense</a></li>
+                <li class="menu-item" style="display:none"><a href="https://pfsense.home.arpa/">PfSense</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.1.5">EXSI</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090">Locamente</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.7">Mail Server</a></li>
