--- a/servers/index.html
+++ b/servers/index.html
@@ -60,12 +60,12 @@
     <div class="window">
         <div class="header menu-opened">
             <ul class="menu">
-                <li class="menu-item" style="display:none"><a href="https://pfsense.home.arpa/">PfSense</a></li>
-                <li class="menu-item" style="display:none"><a href="https://192.168.1.5">EXSI</a></li>
-                <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090">Locamente</a></li>
-                <li class="menu-item" style="display:none"><a href="https://192.168.10.7">Mail Server</a></li>
-                <li class="menu-item" style="display:none"><a href="https://192.168.10.8">Wazuh</a></li>
-                <li class="menu-item" style="display:none"><a href="https://192.168.10.10">TrueNAS</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.1.1" target="_blank>PfSense</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.1.5" target="_blank>EXSI</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090" target="_blank>Locamente</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.7" target="_blank>Mail Server</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.8" target="_blank>Wazuh</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.10" target="_blank>TrueNAS</a></li>
             </ul>
             <div class="shop icon icon-bag"></div>
         </div>
