--- a/servers/index.html
+++ b/servers/index.html
@@ -44,10 +44,10 @@
                     return function (delta) {
                         console.log('Ping time was ' + String(delta) + ' ms');
                         items[index].style.display = "contents"; // Use the captured index value
+                        getElementsByClassName("vpn").style.display = "none"; 
                     }
                 })(i)).catch(function (err) {
                     console.error('Could not ping remote URL', err);
-                    items[i].style.display = "none";
                 });
             }
         };
@@ -60,13 +60,11 @@
     <div class="window">
         <div class="header menu-opened">
             <ul class="menu">
-                <li class="menu-item" style="display:none"><a href="https://192.168.1.1" target="_blank">PfSense</a>
-                </li>
+                <li class="vpn" style="display:contents"><a href="#" target="_blank">No VPN connection!</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.1.1" target="_blank">PfSense</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.1.5" target="_blank">EXSI</a></li>
-                <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090"
-                        target="_blank">Locamente</a></li>
-                <li class="menu-item" style="display:none"><a href="https://192.168.10.7" target="_blank">Mail
-                        Server</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090" target="_blank">Locamente</a></li>
+                <li class="menu-item" style="display:none"><a href="https://192.168.10.7" target="_blank">Mail Server</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.8" target="_blank">Wazuh</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.10" target="_blank">TrueNAS</a>
                 </li>
