--- a/servers/index.html
+++ b/servers/index.html
@@ -44,7 +44,7 @@
                     return function (delta) {
                         console.log('Ping time was ' + String(delta) + ' ms');
                         items[index].style.display = "contents"; // Use the captured index value
-                        getElementsByClassName("vpn").style.display = "none"; 
+                        document.getElementsByClassName("vpn").style.display = "none"; 
                     }
                 })(i)).catch(function (err) {
                     console.error('Could not ping remote URL', err);
@@ -60,7 +60,7 @@
     <div class="window">
         <div class="header menu-opened">
             <ul class="menu">
-                <li class="vpn" style="display:contents"><a href="#" target="_blank">No VPN connection!</a></li>
+                <p class="vpn" style="color: white; text-align: center;">No VPN connection!</p>
                 <li class="menu-item" style="display:none"><a href="https://192.168.1.1" target="_blank">PfSense</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.1.5" target="_blank">EXSI</a></li>
                 <li class="menu-item" style="display:none"><a href="https://192.168.10.6:9090" target="_blank">Locamente</a></li>
