--- a/servers/index.html
+++ b/servers/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="../assets/icon/favicon.ico" type="image/gif" sizes="16x16">
+    <link rel="apple-touch-icon" href="../assets/icon/favicon.png">
     <title>Servers</title>
     <script>
         (function (root, factory) {
