--- a/servers/index.html
+++ b/servers/index.html
@@ -41,18 +41,18 @@
             var items = document.getElementsByClassName("menu-item");
             for (var i = 0; i < items.length; i++) {
                 var url = items[i].getElementsByTagName("a")[0].href;
-                if (!url === "https://r3ne.net") {
-                    ping(url).then((function (index) { // Use a closure to capture the value of i
-                        return function (delta) {
+                ping(url).then((function (index) { // Use a closure to capture the value of i
+                    return function (delta) {
+                        if (!items[index].getElementsByTagName("a")[0].href === "https://r3ne.net"){
                             document.getElementsByClassName("vpn")[0].style.display = "none";
-                            console.log('Ping time was ' + String(delta) + ' ms');
-                            items[index].style.display = "contents"; // Use the captured index value
-
                         }
-                    })(i)).catch(function (err) {
-                        console.error('Could not ping remote URL', err);
-                    });
-                }
+                        console.log('Ping time was ' + String(delta) + ' ms');
+                        items[index].style.display = "contents"; // Use the captured index value
+                
+                    }
+                })(i)).catch(function (err) {
+                    console.error('Could not ping remote URL', err);
+                });
             }
         };
 
