--- a/servers/index.html
+++ b/servers/index.html
@@ -52,6 +52,8 @@
                 })(i)).catch(function (err) {
                     console.error('Could not ping remote URL', err);
                 });
+            } else {
+                console.error('Site URL');
             }
         }
         };
