--- a/servers/index.html
+++ b/servers/index.html
@@ -66,8 +66,7 @@
         <div class="header menu-opened">
             <p class="vpn" style="color: white; text-align: center;">No VPN connection!</p>
             <ul class="menu">
-                <li class="menu-item" style="display:none"><a href="https://r3ne.net" target="_blank">R3NE.NET</a></li>
-                <li class="menu-item" style="display:none"><a href="http://192.168.1.1" target="_blank">PfSense</a></li>
+                <li class="menu-item"><a href="https://r3ne.net" target="_blank">R3NE.NET</a></li>
                 <li class="menu-item" style="display:none"><a href="http://192.168.1.1" target="_blank">PfSense</a></li>
                 <li class="menu-item" style="display:none"><a href="http://192.168.1.5" target="_blank">EXSI</a></li>
                 <li class="menu-item" style="display:none"><a href="http://192.168.10.6:9090" target="_blank">Locamente</a></li>
