--- a/servers/index.html
+++ b/servers/index.html
@@ -41,7 +41,7 @@
                 var items = document.getElementsByClassName("menu-item");
                 for (var i = 0; i < items.length; i++) {
                     var url = items[i].getElementsByTagName("a")[0].href;
-                    if (!url.includes('r3ne.net')) { // skip if url contains 'r3ne.net'
+                    if (!url.includes('https://r3ne.net')) { // skip if url contains 'r3ne.net'
                         ping(url).then((function (index) { // Use a closure to capture the value of i
                             return function (delta) {
                                 document.getElementsByClassName("vpn")[0].style.display = "none";
