--- a/servers/index.html
+++ b/servers/index.html
@@ -69,10 +69,10 @@
             <ul class="menu">
                 <li class="menu-item"><a href="https://r3ne.net" target="_blank">R3NE.NET SERVERS</a></li>
                 <li class="menu-item" style="display:none"><a href="http://pfSense.home.arpa" target="_blank">PfSense</a></li>
-                <li class="menu-item" style="display:none"><a href="https://vmware.local" target="_blank">EXSI</a></li>
-                <li class="menu-item" style="display:none"><a href="https://locamente.local:9090" target="_blank">Locamente</a></li>
-                <li class="menu-item" style="display:none"><a href="https://wazuh.local" target="_blank">Wazuh</a></li>
-                <li class="menu-item" style="display:none"><a href="https://truenas.local" target="_blank">TrueNAS</a>
+                <li class="menu-item" style="display:none"><a href="http://vmware.local" target="_blank">EXSI</a></li>
+                <li class="menu-item" style="display:none"><a href="http://locamente.local:9090" target="_blank">Locamente</a></li>
+                <li class="menu-item" style="display:none"><a href="http://wazuh.local" target="_blank">Wazuh</a></li>
+                <li class="menu-item" style="display:none"><a href="http://truenas.local" target="_blank">TrueNAS</a>
                 </li>
             </ul>
         </div>
