--- a/servers/index.html
+++ b/servers/index.html
@@ -23,9 +23,11 @@
 
     <script>
         const hosts = {
-            "host1": "192.168.0.1",
-            "host2": "192.168.0.2",
-            "host3": "192.168.0.3"
+            "PfSense": "pfsense.home.arpa",
+            "VmWare": "vmware.local",
+            "Locamente": "locamente.local",
+            "Wazuh.local": "wazuh.local",
+            "TrueNAS": "truenas.local"
         };
 
         const pingHost = (host) => {
